Upgrade Java runtime from 17 to 21 LTS